fixing overflow on iphone screen

--- a/style.css
+++ b/style.css
@@ -86,10 +86,10 @@ h3 {
     text-align: left;
     line-height: 1;
     letter-spacing:0.1em;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: white;
-  text-shadow: 
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 3px;
+    -webkit-text-stroke-color: white;
+    text-shadow: 
 						8px 8px #86C232,
 						20px 20px #000000;
 }
@@ -256,12 +256,13 @@ nav {
 
   #work-history {
         background-color: #222629;
-        height: 100vh;
+        height: 100%;
   }
   .work-section {
     width: 100%;
     max-width: 4096px;
     margin-top: 100px;
+    
   }
 
   .work-box {
